--- a/fri/src/com/fridgeCare/fri/resources/Project.properties
+++ b/fri/src/com/fridgeCare/fri/resources/Project.properties
@@ -6,7 +6,7 @@
 /logincheck.fri=com.fridgeCare.fri.controller.member.LoginCheck
 
 
-/selectIngredient.fri=com.fridgeCare.fri.controller.recipe.SelectIngredient
+/search.fri=com.fridgeCare.fri.controller.recipe.Search
 
 
 /resipiPage.fri=com.fridgeCare.fri.controller.recipe.ResipiPage
