--- a/fri/src/com/fridgeCare/fri/resources/Project.properties
+++ b/fri/src/com/fridgeCare/fri/resources/Project.properties
@@ -10,3 +10,5 @@
 
 
 /resipiPage.fri=com.fridgeCare.fri.controller.recipe.ResipiPage
+/resipiLikeCount.fri=com.fridgeCare.fri.controller.recipe.ResipiLikeCount
+/resipiWrite.fri=com.fridgeCare.fri.controller.recipe.ResipiWrite
