--- a/fri/src/com/fridgeCare/fri/resources/Project.properties
+++ b/fri/src/com/fridgeCare/fri/resources/Project.properties
@@ -13,3 +13,4 @@
 /resipiPage.fri=com.fridgeCare.fri.controller.recipe.ResipiPage
 /resipiLikeCount.fri=com.fridgeCare.fri.controller.recipe.ResipiLikeCount
 /resipiWrite.fri=com.fridgeCare.fri.controller.recipe.ResipiWrite
+/partnerBoard.fri=com.fridgeCare.fri.controller.partnerBoard.PartnerBoard
