hh final commit

--- a/fri/src/com/fridgeCare/fri/resources/Project.properties
+++ b/fri/src/com/fridgeCare/fri/resources/Project.properties
@@ -5,6 +5,7 @@
 /joinproc.fri=com.fridgeCare.fri.controller.member.JoinProc
 /logout.fri=com.fridgeCare.fri.controller.member.Logout
 /logincheck.fri=com.fridgeCare.fri.controller.member.LoginCheck
+/partnerboard.fri=com.fridgeCare.fri.controller.board.PartnerBoard
 
 
 /search.fri=com.fridgeCare.fri.controller.search.Search
@@ -14,3 +15,6 @@
 /resipiLikeCount.fri=com.fridgeCare.fri.controller.recipe.ResipiLikeCount
 /resipiWrite.fri=com.fridgeCare.fri.controller.recipe.ResipiWrite
 /partnerBoard.fri=com.fridgeCare.fri.controller.partnerBoard.PartnerBoard
+
+
+/recipeAdd.fri=com.fridgeCare.fri.controller.jooRecipe.RecipeAdd
