--- a/fri/src/com/fridgeCare/fri/resources/Project.properties
+++ b/fri/src/com/fridgeCare/fri/resources/Project.properties
@@ -1,12 +1,21 @@
 /main.fri=com.fridgeCare.fri.controller.member.Bring
 /joinpage.fri=com.fridgeCare.fri.controller.member.Joinpage
 /idCheck.fri=com.fridgeCare.fri.controller.member.IdCheck
+/mailCheck.fri=com.fridgeCare.fri.controller.member.MailCheck
 /joinproc.fri=com.fridgeCare.fri.controller.member.JoinProc
 /logout.fri=com.fridgeCare.fri.controller.member.Logout
 /logincheck.fri=com.fridgeCare.fri.controller.member.LoginCheck
+/partnerboard.fri=com.fridgeCare.fri.controller.board.PartnerBoard
 
 
-/selectIngredient.fri=com.fridgeCare.fri.controller.recipe.SelectIngredient
+/search.fri=com.fridgeCare.fri.controller.search.Search
 
 
+/resipiPage.fri=com.fridgeCare.fri.controller.recipe.ResipiPage
+/resipiLikeCount.fri=com.fridgeCare.fri.controller.recipe.ResipiLikeCount
+/resipiWrite.fri=com.fridgeCare.fri.controller.recipe.ResipiWrite
+/partnerBoard.fri=com.fridgeCare.fri.controller.partnerBoard.PartnerBoard
+
+
+/recipeAdd.fri=com.fridgeCare.fri.controller.jooRecipe.RecipeAdd
 /resipiPage.fri=com.fridgeCare.fri.controller.recipe.ResipiPage
