add board properties commit

--- a/fri/src/com/fridgeCare/fri/resources/Project.properties
+++ b/fri/src/com/fridgeCare/fri/resources/Project.properties
@@ -18,4 +18,4 @@
 
 
 /recipeAdd.fri=com.fridgeCare.fri.controller.jooRecipe.RecipeAdd
-/resipiPage.fri=com.fridgeCare.fri.controller.recipe.ResipiPage
+/recipeAddProc.fri=com.fridgeCare.fri.controller.jooRecipe.RecipeAddProc
